[package]
name = "cryptvault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
web-sys = { version = "0.3", features = ["console"] }
# Post-quantum when you grow balls
# pqcrypto-kyber = "0.7"  # uncomment later

[dev-dependencies]
wasm-bindgen-test = "0.3"
